--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -22,4 +22,6 @@ jobs:
     - name: Build with Gradle
       run: | 
             gradle init
+            #xxxxx
+            gradlew build
             ls -l
