--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -23,5 +23,5 @@ jobs:
       run: | 
             gradle init
             #xxxxx
-            gradlew build
+            ./gradlew build
             ls -l
