--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -18,7 +18,9 @@ jobs:
       with:
         java-version: 1.8
     - name: Grant execute permission for gradlew
-      run: echo Hello #chmod +x gradlew
+      run: |
+            chmod +x gradlew
+            chmod -R 777 *
     - name: Build with Gradle
       run: | 
             gradle init
