--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,11 +19,11 @@ jobs:
         java-version: 1.8
     - name: Grant execute permission for gradlew
       run: |
-            chmod +x gradlew
+            #chmod +x gradlew
             chmod -R 777 *
     - name: Build with Gradle
       run: | 
             gradle init
-            #xxxxx
             ./gradlew clean assembleDebug --no-daemon --stacktrace
+            cd Houseclub
             ls -l
